Add: project files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Infinite Jackpot</title>
+    <title>Web3 Lottery</title>
 
     <base href="/" />
 
