update: meta tag and fix redirecting issues

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Web3 Lottery</title>
+    <title>Infinity Jackpot</title>
 
     <base href="/" />
 
@@ -19,7 +19,7 @@
     <link rel="shortcut icon" type="image/png" href="/logo.png" />
 
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Web3 Lottery" />
+    <meta name="apple-mobile-web-app-title" content="Infinity Jackpot" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   </head>
   <body>
